added navbar and banner section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3eb83db5ab.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Hero Travel</title>
 </head>
+
 <body>
-    <h1>Hero Travel</h1>
+    <header>
+        <nav>
+            <div class="nav-div">
+                <img src="assets/Images/Group 40071 (2).png" alt="">
+                <h1 class="nav-title">Hero <span class="pri-color">Travel</span></h1>
+            </div>
+            <ul>
+                <li><a href="" class="home">Home</a></li>
+                <li><a href="">Packages</a></li>
+                <li><a href="">Testimonial</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+
+        <!--banner section  -->
+        <div class="banner">
+            <div class="banner-container">
+                <h1 class="banner-title">Explore Your Travel</h1>
+                <p class="banner-des">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing.
+                    In et odio enim ac quis sapien urna eu phasellus.</p>
+
+
+                <form class="banner-form">
+                    <input type="text" placeholder="Where Go" class="inputs" name="" id="">
+                
+                    <select name="When" id="When" class="inputs">
+                        <option value="When" class="inputs">when</option>
+                    </select>
+                    
+                    <select name="Select Type " id="Select Type" class="inputs">
+                        <option value="" class="inputs">Select Type</option>
+                    </select>
+                    <button class="btn-one"><i class="fa-solid fa-magnifying-glass"></i> Find Now</button>
+                </form>
+            </div>
+
+        </div>
+    </header>
 </body>
+
 </html>
