responsive navbar and banner section

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                 <form class="banner-form">
                     <input type="text" placeholder="Where Go" class="inputs" name="" id="">
                 
-                    <select name="When" id="When" class="inputs">
-                        <option value="When" class="inputs">when</option>
+                    <select name="When" id="When" class="select">
+                        <option value="When" class="select">when</option>
                     </select>
                     
-                    <select name="Select Type " id="Select Type" class="inputs">
-                        <option value="" class="inputs">Select Type</option>
+                    <select name="Select Type " id="Select Type" class="select">
+                        <option value="" class="select">Select Type</option>
                     </select>
                     <button class="btn-one"><i class="fa-solid fa-magnifying-glass"></i> Find Now</button>
                 </form>
