--- a/jdsfad.html
+++ b/jdsfad.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        /* select option[value=""] {
+        select option[value=""] {
             color: grey; /* Change this to your desired color */
-        } */
+        }
         select:invalid {
             color: rgb(246, 13, 13); /* Change this to match the placeholder color */
         }
