--- a/index.html
+++ b/index.html
@@ -54,6 +54,26 @@
 
         </div>
     </header>
+
+    <main>
+        <section class="Popular-Tours">
+            <div class="tour-content">
+                <h1 class="tour-title">Our Popular Tours</h1>
+                <p class="section-des">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <ul class="section-des">
+                    <li class="tour-li">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+                    <li class="tour-li">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                    <li class="tour-li"> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                </ul>
+                <p class="section-des">Amet consectetur. Vulputate commodo felis molestie risus 
+                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                <button class="btn-read-more">Read More</button>
+            </div>
+            <div class="tour-img">
+                <img src="assets/Images/Rectangle 4.png" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
