added and responsive Choose Your Destination section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
         </div>
     </header>
 
+    <!-- main section start -->
+
     <main>
+        <!-- Popular section start -->
         <section class="Popular-Tours">
             <div class="tour-content">
                 <h1 class="tour-title">Our Popular Tours</h1>
@@ -73,6 +76,29 @@
                 <img src="assets/Images/Rectangle 4.png" alt="">
             </div>
         </section>
+
+        <!-- Choose Your Destination start -->
+         <section class="destination">
+            <div class="destination-container">
+                <h1 class="destination-title">Choose Your Destination</h1>
+                <p class="section-des">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="destination-img-container">
+                <div class="destination-img">
+                    <img src="assets/Images/Rectangle 5.png" alt="">
+                    <img src="assets/Images/Rectangle 8.png" alt="">
+                </div>
+                <div class="destination-img">
+                    <img src="assets/Images/Rectangle 6.png" alt="">
+                    <img src="assets/Images/Rectangle 7.png" alt="">
+                    <img src="assets/Images/Rectangle 9.png" alt="">
+                </div>
+                <div class="destination-img">
+                    <img src="assets/Images/Rectangle 11.png" alt="">
+                    <img src="assets/Images/Rectangle 10.png" alt="">
+                </div>
+            </div>
+         </section>
     </main>
 </body>
 
