added why choose us section and make responsive

--- a/index.html
+++ b/index.html
@@ -99,6 +99,33 @@
                 </div>
             </div>
          </section>
+
+         <!-- Why Choose Us section start -->
+
+         <section class="why-choose-us">
+            <div class="choose-cotent">
+                <h1 class="content-title">Why Choose Us</h1>
+                <p class="section-des">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+
+            <div class="choose-img-container">
+                <div class="choose-img box-1">
+                    <img src="assets/Images/hotel.png" alt="">
+                    <h3 class="img-title">Handpicked Hotels</h3>
+                    <p class="section-des">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="choose-img box-2">
+                    <img src="assets/Images/map.png" alt="">
+                    <h3 class="img-title">World Class Service</h3>
+                    <p class="section-des">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="choose-img box-3">
+                    <img src="assets/Images/best price.png" alt="">
+                    <h3 class="img-title">Best Price Guarantee</h3>
+                    <p class="section-des">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+            </div>
+         </section>
     </main>
 </body>
 
