--- a/index.html
+++ b/index.html
@@ -126,6 +126,46 @@
                 </div>
             </div>
          </section>
+
+         <!-- Deals & Discounts Section start -->
+
+         <section class="deals-container">
+            <div class="deals">
+                <h1>Deals & Discounts</h1>
+                <p class="section-des">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+
+            <div class="discount-container container-1">
+                <div class="discount deals-1">
+                    <p class="section-des">7 Day / 6 Night</p>
+                    <h1 class="discount-title">Tour To Satorini</h1>
+                    <p class="section-des">Amet consectetur. Vulputate commodo felis 
+                        molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                        <p class="price">Price: $1300-$1500</p>
+                    <button class="btn-read-more">Book Now</button>
+                </div>
+            </div>
+            <div class="discount-container container-2">
+                <div class="discount deals-1">
+                    <p class="section-des">7 Day / 6 section-des</p>
+                    <h1 class="discount-title">Tour To Satorini</h1>
+                    <p class="section-des">Amet consectetur. Vulputate commodo felis 
+                        molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                        <p class="price">Price: $1300-$1500</p>
+                    <button class="btn-read-more">Book Now</button>
+                </div>
+            </div>
+            <div class="discount-container container-3">
+                <div class="discount deals-1">
+                    <p class="section-des">7 Day / 6 section-des</p>
+                    <h1 class="discount-title">Tour To Satorini</h1>
+                    <p class="section-des">Amet consectetur. Vulputate commodo felis 
+                        molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                        <p class="price">Price: $1300-$1500</p>
+                    <button class="btn-read-more">Book Now</button>
+                </div>
+            </div>
+         </section>
     </main>
 </body>
 
