added newslater and make responsive

--- a/index.html
+++ b/index.html
@@ -166,6 +166,31 @@
                 </div>
             </div>
          </section>
+
+         <!-- Newsletter section start -->
+
+         <section class="Newsletter-container">
+            <div class="Newsletter-content">
+                <h1 class="Newsletter-title">Newsletter</h1>
+                <p class="section-des">Get your daily dose of travel news & tips. Sign up today!</p>
+                <hr>
+                <form class="form">
+                    <input type="text" name="" placeholder="Your Name" required id="">
+                    <input type="email" name="" placeholder="Your Email"  required="">
+                    
+                </form>
+                <button class="btn-newslater">Subscribe</button>
+            </div>
+            <div class="Newsletter-img">
+               <img src="assets/Images/Rectangle 8 (1).png" alt="">
+               <div class="offer">
+                <p class="offer-title">Travel.com</p>
+                <h1>Save up to 70%</h1>
+               </div>
+            </div>
+
+            
+         </section>
     </main>
 </body>
 
