added footer section and make responsive

--- a/index.html
+++ b/index.html
@@ -188,9 +188,26 @@
                 <h1>Save up to 70%</h1>
                </div>
             </div>
-
-            
          </section>
+
+         <!-- footer section start -->
+
+         <footer>
+            <div class="footer">
+                <div class="footer-title">
+                    <img src="assets/Images/Group 40071 (2).png" alt="">
+                    <h1 class="nav-title">Hero <span class="pri-color">Travel</span></h1>
+                </div>
+                <p class="section-des description">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+                <div class="footer-img">
+                    <img src="assets/icon/facebook.png"></img>
+                    <img src="assets/icon/insta.png"></img>
+                    <img src="assets/icon/twitter.png"></img>
+                </div>
+                <hr>
+                <p class="section-des-second section-des">&copy;2017, All Rights Reserved to Mosiur Rahman Mahfuz.</p>
+            </div>
+         </footer>
     </main>
 </body>
 
